# mnist-cuda

./: CMakeLists.txt  README.md  TODO.md
src/: main.cpp  test.cpp  train.cpp
src/gpu/: gpu_kernels.cu  gpu_ops.cu  gpu_ops.h  gpu_stub.cpp
src/mnist/: mnist_loader.cpp  mnist_loader.hpp
src/neural_network/: network.cpp  network.hpp
